PRMT-2019 [HZ] Refactor fix to use sass mq for increased readability

--- a/src/components/common/FormComponents/Autosuggest/index.scss
+++ b/src/components/common/FormComponents/Autosuggest/index.scss
@@ -10,7 +10,7 @@
   margin-right: 3rem;
   position: relative;
 
-  @media (max-width: 1024px) {
+  @include mq($until: desktop) {
     margin-right: 0;
   }
 }
